# Insight_Context_Retrieval

./: .README.md  .gitignore  pyproject.toml  streamlit_app.py
app/: clustering_utils.py  context_chatbot.py  detailed_cluster_summary_utils.py  intialise_data.py  main.py  notebook.ipynb  populate_chromadb.py  populate_close_note_summaries.py  query_chromadb_utils.py  summarise_close_notes_utils.py  summarise_previous_actions_utils.py
